# recova-project

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  ecosystem.config.js  package.json  pyproject.toml  pytest.ini  requirements.txt  setup_db.py
docs/: architecture.md  bronze-multi-proveedor-master-data.md  bronze-silver-comicos-sync.md  bronze-solo-solicitudes-linaje-silver.md  canva-oauth-pkce-builder.md  curacion-lineup-validacion-estados-gold-silver.md  esquemas-bronze-silver.md  github-actions-deploy-dev.md  ingesta-atomica-n8n.md  ingesta-batch-bronze-queue.md  ingesta-bronze-silver-error-handling.md  ingesta-bronze-silver-reserva.md  ingesta-constraint-unicidad-proveedor-slug.md  ingesta-logs-auditoria.md  ingesta-whatsapp-show-cercano-origen.md  mcp-agnostic-renderer-spec.md  n8n-workflows-secretos-entorno.md  openapi.yaml  proveedor-default-recova.md  refactor-validacion-bronze-silver.md  render-api-produccion.md  scoring-batch-n8n-fix.md  sdd_v2_svg_renderer.md  seed-data-casos-borde.md  seed-unique-comico-fecha-fix.md  sequence-diagram.md  setup-db-backup-local.md  setup-db-backup-reset-seed.md  setup-db-migraciones.md  setup.md  silver-relacional.md  sprints.md  stack-tecnologico-infraestructura-mvp.md  tests-backend.md  webhook-listener-n8n-ingesta.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js
memory/: MEMORY.md
specs/: custom_scoring_spec.md  dev_tools_spec.md  forms_batch_ingest_spec.md  frontend_lineup_notebook_spec.md  (+19 more)
(+187 files in other folders)
